--- a/index.html
+++ b/index.html
@@ -11,82 +11,92 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <header>
-      <nav class="site-nav">
-        <a class="logo" href="./index.html">
-          <span class="logo-item">Web</span>Studio
-        </a>
-        <ul class="list">
-          <li>
-            <a class="link-item" href="">Studio</a>
-          </li>
-          <li>
-            <a class="link-item" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li>
-            <a class="link-item" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul class="list">
-          <li>
-            <a class="maail link" href="mailto:info@devstudio.com"
-              >info@devstudio.com
-            </a>
-          </li>
-          <li>
-            <a class="tel link" href="tel:+110001111111"
-              >+11 (000) 111-11-11
-            </a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <nav class="site-nav">
+          <a class="logo" href="./index.html">
+            <span class="logo-item">Web</span>Studio
+          </a>
+          <ul class="list">
+            <li>
+              <a class="link-item" href="">Studio</a>
+            </li>
+            <li>
+              <a class="link-item" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li>
+              <a class="link-item" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="list">
+            <li>
+              <a class="maail link" href="mailto:info@devstudio.com"
+                >info@devstudio.com
+              </a>
+            </li>
+            <li>
+              <a class="tel link" href="tel:+110001111111"
+                >+11 (000) 111-11-11
+              </a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!--Hero-->
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="hero-button">Order Service</button>
+        </div>
       </section>
       <!--/Hero-->
       <!--Our work-->
       <section class="section">
-        <h2 class="section-title">quality</h2>
-        <ul class="list">
-          <li>
-            <h3 class="section-title item">Strategy</h3>
-            <p class="text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-title item">Punctuality</h3>
-            <p class="text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-title item">Diligence</h3>
-            <p class="text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-title item">Technologies</h3>
-            <p class="text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">quality</h2>
+          <ul class="list">
+            <li>
+              <h3 class="section-title item">Strategy</h3>
+              <p class="text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="section-title item">Punctuality</h3>
+              <p class="text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="section-title item">Diligence</h3>
+              <p class="text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="section-title item">Technologies</h3>
+              <p class="text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--/Our work-->
       <!--Our team-->
