--- a/index.html
+++ b/index.html
@@ -20,31 +20,31 @@
 
   <body>
     <header>
-      <div class="container">
-        <nav class="site-nav">
+      <div class="container site-nav">
+        <nav class="site-nav-item">
           <a class="logo" href="./index.html">
             <span class="logo-item">Web</span>Studio
           </a>
-          <ul class="list">
-            <li>
+          <ul class="list nav">
+            <li class="nav-item">
               <a class="link-item" href="">Studio</a>
             </li>
-            <li>
+            <li class="nav-item">
               <a class="link-item" href="./portfolio.html">Portfolio</a>
             </li>
-            <li>
+            <li class="nav-item">
               <a class="link-item" href="">Contacts</a>
             </li>
           </ul>
         </nav>
         <address class="contacts">
-          <ul class="list">
-            <li>
+          <ul class="list contacts-flex">
+            <li class="contacts-item">
               <a class="maail link" href="mailto:info@devstudio.com"
                 >info@devstudio.com
               </a>
             </li>
-            <li>
+            <li class="contacts-item">
               <a class="tel link" href="tel:+110001111111"
                 >+11 (000) 111-11-11
               </a>
@@ -65,31 +65,31 @@
       <!--Our work-->
       <section class="section">
         <div class="container">
-          <h2 class="section-title">quality</h2>
-          <ul class="list">
-            <li>
-              <h3 class="section-title item">Strategy</h3>
+          <h2 class="section-title visually-hidden">quality</h2>
+          <ul class="list-work list">
+            <li class="work-item">
+              <h3 class="section-subtitle item">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
-              <h3 class="section-title item">Punctuality</h3>
+            <li class="work-item">
+              <h3 class="section-subtitle item">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
-              <h3 class="section-title item">Diligence</h3>
+            <li class="work-item">
+              <h3 class="section-subtitle item">Diligence</h3>
               <p class="text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
-              <h3 class="section-title item">Technologies</h3>
+            <li class="work-item">
+              <h3 class="section-subtitle item">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
@@ -99,60 +99,76 @@
         </div>
       </section>
       <!--/Our work-->
+      <!-- exemple -->
+      <section class="section exemple">
+        <div class="container">
+          <h2 class="section-title">What are we doing</h2>
+          <ul class="list-exemple list">
+            <li class="exemple-item">
+              <img src="./images/website.jpg" alt="website" width="360" />
+            </li>
+            <li class="exemple-item">
+              <img src="./images/messengers.jpg" alt="messengers" width="360" />
+            </li>
+            <li class="exemple-item">
+              <img
+                src="./images/phoneapplication.jpg"
+                alt="phone application"
+                width="360"
+              />
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- /exemple -->
       <!--Our team-->
       <section class="section">
-        <h2 class="section-title">What are we doing</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/website.jpg" alt="website" width="360" />
-          </li>
-          <li>
-            <img src="./images/messengers.jpg" alt="messengers" width="360" />
-          </li>
-          <li>
-            <img
-              src="./images/phoneapplication.jpg"
-              alt="phone application"
-              width="360"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title team-title">Our Team</h2>
+          <ul class="team-list list">
+            <li class="team-list-item">
+              <img src="./images/team-1.jpg" alt="photo" width="264" />
+              <div class="team">
+                <h3 class="section-subtitle item">Mark Guerrero</h3>
+                <p class="text">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <img src="./images/team-2.jpg" alt="photo" width="264" />
+              <div class="team">
+                <h3 class="section-subtitle item">Tom Ford</h3>
+                <p class="text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <img src="./images/team-3.jpg" alt="photo" width="264" />
+              <div class="team">
+                <h3 class="section-subtitle item">Camila Garcia</h3>
+                <p class="text">Marketing</p>
+              </div>
+            </li>
+            <li class="team-list-item">
+              <img src="./images/team-4.jpg" alt="photo" width="264" />
+              <div class="team">
+                <h3 class="section-subtitle item">Daniel Wilson</h3>
+                <p class="text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--/Our team-->
-      <section class="section">
-        <h2 class="section-title">Our Team</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/team-1.jpg" alt="photo" width="264" />
-            <h3 class="section-title item">Mark Guerrero</h3>
-            <p class="text">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/team-2.jpg" alt="photo" width="264" />
-            <h3 class="section-title item">Tom Ford</h3>
-            <p class="text">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/team-3.jpg" alt="photo" width="264" />
-            <h3 class="section-title item">Camila Garcia</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/team-4.jpg" alt="photo" width="264" />
-            <h3 class="section-title item">Daniel Wilson</h3>
-            <p class="text">UI Designer</p>
-          </li>
-        </ul>
-      </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="footer-logo">
-        <span class="logo-item">Web</span>Studio
-      </a>
-      <p class="text-item">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="footer-logo">
+          <span class="logo-item">Web</span>Studio
+        </a>
+        <p class="text-item">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
