--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
     <main>
       <section class="section">
         <div class="container">
-          <h1 class="title">our projects</h1>
+          <h1 class="title visually-hidden">our projects</h1>
           <ul class="filter list">
             <li><button type="button" class="filter-button">All</button></li>
             <li><button type="button" class="filter-button">Web Site</button></li>
@@ -120,6 +120,7 @@
     </main>
 
     <footer class="footer">
+      <div class="container">
       <a href="./index.html" class="footer-logo">
         <span class="logo-item">Web</span>Studio
       </a>
@@ -127,6 +128,7 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+      </div>
     </footer>
   </body>
 </html>
