--- a/portfolio.html
+++ b/portfolio.html
@@ -12,39 +12,39 @@
       rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
-    <header>
-     <div class="container">
-        <nav class="site-nav">
+   <header>
+      <div class="container site-nav">
+        <nav class="site-nav-item">
           <a class="logo" href="./index.html">
             <span class="logo-item">Web</span>Studio
           </a>
-          <ul class="list">
-            <li>
+          <ul class="list nav">
+            <li class="nav-item">
               <a class="link-item" href="./index.html">Studio</a>
             </li>
-            <li>
+            <li class="nav-item">
               <a class="link-item" href="">Portfolio</a>
             </li>
-            <li>
+            <li class="nav-item">
               <a class="link-item" href="">Contacts</a>
             </li>
           </ul>
         </nav>
         <address class="contacts">
-          <ul class="list">
-            <li>
-              <a class="mail link" href="mailto:info@devstudio.com"
+          <ul class="list contacts-flex">
+            <li class="contacts-item">
+              <a class="maail link" href="mailto:info@devstudio.com"
                 >info@devstudio.com
               </a>
             </li>
-            <li>
+            <li class="contacts-item">
               <a class="tel link" href="tel:+110001111111"
                 >+11 (000) 111-11-11
               </a>
             </li>
           </ul>
         </address>
-     </div>
+      </div>
     </header>
     <main>
       <section class="section">
