добавив flex для porfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
    <header>
-      <div class="container site-nav">
+      <div class="container site-nav portfolio-item">
         <nav class="site-nav-item">
           <a class="logo" href="./index.html">
             <span class="logo-item">Web</span>Studio
@@ -47,7 +47,7 @@
       </div>
     </header>
     <main>
-      <section class="section">
+      <section class="section portfolio">
         <div class="container">
           <h1 class="title visually-hidden">our projects</h1>
           <ul class="filter list">
@@ -58,61 +58,79 @@
             <li><button type="button" class="filter-button">Marketing</button></li>
           </ul>
               
-          <ul class="list">
+          <ul class="list portfolio-exemple">
             <li>
               <img src="./images/banking.jpg" alt=" banking app" width="360"
               height="300" />
-              <h2 class="section-subtitle">Banking App Interface Concept</h2>
-              <p class="section-text">App</p>
+              <div class="exemple-item">
+                <h2 class="section-subtitle">Banking App Interface Concept</h2>
+                <p class="section-text">App</p>
+              </div>
             </li>
             <li>
               <img src="./images/payment.jpg" alt="payment" width="360"
               height="300" />
-              <h2 class="section-subtitle">Cashless Payment</h2>
-              <p class="section-text">Marketing</p>
+              <div class="exemple-item">
+                <h2 class="section-subtitle">Cashless Payment</h2>
+                <p class="section-text">Marketing</p>
+              </div>
             </li>
             <li>
               <img src="./images/meditaion-app.jpg" alt="meditaion-app" width="360"
               height="300" />
-              <h2 class="section-subtitle">Meditaion App</h2>
-              <p class="section-text">App</p>
+              <div class="exemple-item">
+                <h2 class="section-subtitle">Meditaion App</h2>
+                <p class="section-text">App</p>
+              </div>
             </li>
             <li>
               <img src="./images/taxi-service.jpg" alt="taxi-service" width="360"
               height="300" />
-              <h2 class="section-subtitle">Taxi Service</h2>
-              <p class="section-text">Marketing</p>
+             <div class="exemple-item">
+                <h2 class="section-subtitle">Taxi Service</h2>
+                <p class="section-text">Marketing</p>
+             </div>
             </li>
             <li>
               <img src="./images/screen-illustrations.jpg"
               alt="screen-illustrations" width="360"
               height="300" />
-              <h2 class="section-subtitle">Screen Illustrations</h2>
-              <p class="section-text">Design</p>
+              <div class="exemple-item">
+                <h2 class="section-subtitle">Screen Illustrations</h2>
+                <p class="section-text">Design</p>
+              </div>
             </li>
             <li>
               <img src="./images/online-courses.jpg" alt="online-courses" width="360"
               height="300" />
-              <h2 class="section-subtitle">Online Courses</h2>
-              <p class="section-text">Marketing</p>
+             <div class="exemple-item">
+                <h2 class="section-subtitle">Online Courses</h2>
+                <p class="section-text">Marketing</p>
+             </div>
             </li>
             <li>
               <img src="./images/instagram.jpg" alt="Instagram" width="360"
               height="300" />
-              <h2 class="section-subtitle">Instagram Stories Concept</h2>
-              <p class="section-text">Design</p>
+              <div class="exemple-item">
+                <h2 class="section-subtitle">Instagram Stories Concept</h2>
+                <p class="section-text">Design</p>
+              </div>
             </li>
             <li>
               <img src="./images/organic-food.jpg" alt="organic-food" width="360"
               height="300" />
-              <h2 class="section-subtitle">Organic Food</h2>
-              <p class="section-text">Web Site</p>
+             <div class="exemple-item">
+                <h2 class="section-subtitle">Organic Food</h2>
+                <p class="section-text">Web Site</p>
+             </div>
             </li>
             <li>
               <img src="./images/fresh-coffee.jpg" alt="fresh-coffee" width="360"
               height="300" />
-              <h2 class="section-subtitle">Fresh Coffee</h2>
-              <p class="section-text">Web Site</p>
+              <div class="exemple-item">
+                <h2 class="section-subtitle">Fresh Coffee</h2>
+                <p class="section-text">Web Site</p>
+              </div>
             </li>
           </ul>
         </div>
