--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       </section>
       <!-- /exemple -->
       <!--Our team-->
-      <section class="section">
+      <section class="section oue-team">
         <div class="container">
           <h2 class="section-title team-title">Our Team</h2>
           <ul class="team-list list">
