--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
       rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
-   <header>
+   <header class="portfolio-header" >
       <div class="container site-nav portfolio-item">
         <nav class="site-nav-item">
           <a class="logo" href="./index.html">
@@ -62,7 +62,7 @@
             <li>
               <img src="./images/banking.jpg" alt=" banking app" width="360"
               height="300" />
-              <div class="exemple-item">
+              <div class="portfolio-exemple-item">
                 <h2 class="section-subtitle">Banking App Interface Concept</h2>
                 <p class="section-text">App</p>
               </div>
@@ -70,7 +70,7 @@
             <li>
               <img src="./images/payment.jpg" alt="payment" width="360"
               height="300" />
-              <div class="exemple-item">
+              <div class="portfolio-exemple-item">
                 <h2 class="section-subtitle">Cashless Payment</h2>
                 <p class="section-text">Marketing</p>
               </div>
@@ -78,7 +78,7 @@
             <li>
               <img src="./images/meditaion-app.jpg" alt="meditaion-app" width="360"
               height="300" />
-              <div class="exemple-item">
+              <div class="portfolio-exemple-item">
                 <h2 class="section-subtitle">Meditaion App</h2>
                 <p class="section-text">App</p>
               </div>
@@ -86,7 +86,7 @@
             <li>
               <img src="./images/taxi-service.jpg" alt="taxi-service" width="360"
               height="300" />
-             <div class="exemple-item">
+             <div class="portfolio-exemple-item">
                 <h2 class="section-subtitle">Taxi Service</h2>
                 <p class="section-text">Marketing</p>
              </div>
@@ -95,7 +95,7 @@
               <img src="./images/screen-illustrations.jpg"
               alt="screen-illustrations" width="360"
               height="300" />
-              <div class="exemple-item">
+              <div class="portfolio-exemple-item">
                 <h2 class="section-subtitle">Screen Illustrations</h2>
                 <p class="section-text">Design</p>
               </div>
@@ -103,7 +103,7 @@
             <li>
               <img src="./images/online-courses.jpg" alt="online-courses" width="360"
               height="300" />
-             <div class="exemple-item">
+             <div class="portfolio-exemple-item">
                 <h2 class="section-subtitle">Online Courses</h2>
                 <p class="section-text">Marketing</p>
              </div>
@@ -111,7 +111,7 @@
             <li>
               <img src="./images/instagram.jpg" alt="Instagram" width="360"
               height="300" />
-              <div class="exemple-item">
+              <div class="portfolio-exemple-item">
                 <h2 class="section-subtitle">Instagram Stories Concept</h2>
                 <p class="section-text">Design</p>
               </div>
@@ -119,7 +119,7 @@
             <li>
               <img src="./images/organic-food.jpg" alt="organic-food" width="360"
               height="300" />
-             <div class="exemple-item">
+             <div class="portfolio-exemple-item">
                 <h2 class="section-subtitle">Organic Food</h2>
                 <p class="section-text">Web Site</p>
              </div>
@@ -127,7 +127,7 @@
             <li>
               <img src="./images/fresh-coffee.jpg" alt="fresh-coffee" width="360"
               height="300" />
-              <div class="exemple-item">
+              <div class="portfolio-exemple-item">
                 <h2 class="section-subtitle">Fresh Coffee</h2>
                 <p class="section-text">Web Site</p>
               </div>
